CM-746: Fix spacing issue under the standard callout text

--- a/src/gatsby/src/styles/global.scss
+++ b/src/gatsby/src/styles/global.scss
@@ -109,7 +109,7 @@ blockquote {
   font-weight: 700;
   border: none;
   border-radius: 4px;
-  margin: 16px 0 32px;
+  margin: 16px 0;
   padding: 20px;
 }
 
